Decouple `id` in field.js and fix spacing issues with CSS.

--- a/src/styles/pages/_user-view.scss
+++ b/src/styles/pages/_user-view.scss
@@ -27,6 +27,18 @@ nav {
   margin-right: 1em;
 }
 
+.user-view-form {
+  padding: 0.5em 0;
+
+  p {
+    margin: 0;
+  }
+}
+
+.description {
+  padding-bottom: 1em;
+}
+
 
 @media (min-width: 768px) {
   .navbar-toggle.navbar-toggle {
